<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-140dp"
        android:layout_marginBottom="-170dp"
        android:src="@drawable/c2_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="-150dp"
        android:src="@drawable/c1_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginScreen">

            <TextView
                android:id="@+id/textView"
                style="@style/textBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="73dp"
                android:text="@string/sign_in"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circles_login"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />


            <TextView
                android:id="@+id/textView2"
                style="@style/textBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/welcome"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/textMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/if_you_don_t_have_account_credentials_you_can_take_it_nin_near_hospital_in_your_city_after_vaccination"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:id="@+id/llEditTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="59dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <TextView
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_login"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded" />

                <TextView
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="73dp"
                    android:text="@string/your_password"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSignInLogin"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:drawableEnd="@drawable/right"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/light_dark_blue_200"
                android:textSize="20sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/llEditTexts"
                app:layout_constraintStart_toStartOf="@+id/llEditTexts"
                app:layout_constraintTop_toBottomOf="@+id/llEditTexts" />

            <LinearLayout
                android:id="@+id/llAlert"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:alpha="0"
                android:visibility="gone"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/llEditTexts"
                app:layout_constraintStart_toStartOf="@+id/llEditTexts"
                app:layout_constraintTop_toBottomOf="@+id/llEditTexts">

                <TextView
                    android:id="@+id/txtAlert"
                    style="@style/textRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    tools:text="We can’t find account with this credentials" />

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/info" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/llEditTexts"
                app:layout_constraintStart_toStartOf="@+id/llEditTexts"
                app:layout_constraintTop_toBottomOf="@+id/llEditTexts" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>